nav-panel now only shows the current project and its bugs

--- a/client/src/CSS/scss_partials/home/menu/nav-panel/_navPanelButtonList.scss
+++ b/client/src/CSS/scss_partials/home/menu/nav-panel/_navPanelButtonList.scss
@@ -27,7 +27,8 @@
 	}
 
 	.item__icon {
-		padding-right: v.$nav-panel-button-list-main-item-icon-padding-right;
+		margin-right: v.$nav-panel-button-icon-margin-right;
+		width: v.$nav-panel-button-icon-width;
 	}
 
 	.item--selected, .sub-item--selected {
@@ -41,6 +42,7 @@
 	}
 
 	.sub-item__ellipsis-container__icon {
-		margin-right: 5px;
+		margin-right: v.$nav-panel-button-icon-margin-right;
+		width: v.$nav-panel-button-icon-width;
 	}
 }
