--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -360,7 +360,8 @@
   padding: 0px 10px;
 }
 .nav-panel-button-list-component .item__icon {
-  padding-right: 10px;
+  margin-right: 10px;
+  width: 15px;
 }
 .nav-panel-button-list-component .item--selected, .nav-panel-button-list-component .sub-item--selected {
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.01), -1px 1px 1px rgba(0, 0, 0, 0.01);
@@ -371,7 +372,8 @@
   text-overflow: ellipsis;
 }
 .nav-panel-button-list-component .sub-item__ellipsis-container__icon {
-  margin-right: 5px;
+  margin-right: 10px;
+  width: 15px;
 }
 
 .navbar-component {
