--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -331,15 +331,15 @@
   padding-top: 10px;
 }
 
-.nav-panel-button-list-component {
+.nav-panel-button-list-component, .js-get-nav-panel-button-list-component {
   width: auto;
   font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
 }
-.nav-panel-button-list-component .static-container {
+.nav-panel-button-list-component .static-container, .js-get-nav-panel-button-list-component .static-container {
   padding-top: 10px;
 }
-.nav-panel-button-list-component .over-flow-container {
+.nav-panel-button-list-component .over-flow-container, .nav-panel-button-list-component .js-get-over-flow-container, .js-get-nav-panel-button-list-component .over-flow-container, .js-get-nav-panel-button-list-component .js-get-over-flow-container {
   padding-bottom: 30px;
   height: 80vh;
   overflow-y: auto;
@@ -351,20 +351,26 @@
   /* Handle */
   /* Handle on hover */
 }
-.nav-panel-button-list-component .over-flow-container ::-webkit-scrollbar {
+.nav-panel-button-list-component .over-flow-container ::-webkit-scrollbar, .nav-panel-button-list-component .js-get-over-flow-container ::-webkit-scrollbar, .js-get-nav-panel-button-list-component .over-flow-container ::-webkit-scrollbar, .js-get-nav-panel-button-list-component .js-get-over-flow-container ::-webkit-scrollbar {
   width: 10px;
 }
-.nav-panel-button-list-component .over-flow-container ::-webkit-scrollbar-track {
+.nav-panel-button-list-component .over-flow-container ::-webkit-scrollbar-track, .nav-panel-button-list-component .js-get-over-flow-container ::-webkit-scrollbar-track, .js-get-nav-panel-button-list-component .over-flow-container ::-webkit-scrollbar-track, .js-get-nav-panel-button-list-component .js-get-over-flow-container ::-webkit-scrollbar-track {
   background: #f1f1f1;
 }
-.nav-panel-button-list-component .over-flow-container ::-webkit-scrollbar-thumb {
+.nav-panel-button-list-component .over-flow-container ::-webkit-scrollbar-thumb, .nav-panel-button-list-component .js-get-over-flow-container ::-webkit-scrollbar-thumb, .js-get-nav-panel-button-list-component .over-flow-container ::-webkit-scrollbar-thumb, .js-get-nav-panel-button-list-component .js-get-over-flow-container ::-webkit-scrollbar-thumb {
   background: #888;
 }
-.nav-panel-button-list-component .over-flow-container ::-webkit-scrollbar-thumb:hover {
+.nav-panel-button-list-component .over-flow-container ::-webkit-scrollbar-thumb:hover, .nav-panel-button-list-component .js-get-over-flow-container ::-webkit-scrollbar-thumb:hover, .js-get-nav-panel-button-list-component .over-flow-container ::-webkit-scrollbar-thumb:hover, .js-get-nav-panel-button-list-component .js-get-over-flow-container ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+.nav-panel-button-list-component .over-flow-container--scrollbar-present, .nav-panel-button-list-component .js-get-over-flow-container--scrollbar-present, .js-get-nav-panel-button-list-component .over-flow-container--scrollbar-present, .js-get-nav-panel-button-list-component .js-get-over-flow-container--scrollbar-present {
+  margin-top: 10px;
+  padding-top: 10px;
+  box-shadow: inset 0 7px 9px -7px rgba(0, 0, 0, 0.1);
+}
 .nav-panel-button-list-component .item,
-.nav-panel-button-list-component .nav-panel-button-list-sub-item-component {
+.nav-panel-button-list-component .nav-panel-button-list-sub-item-component, .js-get-nav-panel-button-list-component .item,
+.js-get-nav-panel-button-list-component .nav-panel-button-list-sub-item-component {
   display: flex;
   margin: 0 10px;
   border-radius: 5px;
@@ -379,23 +385,24 @@
   user-select: none;
   /* Standard syntax */
 }
-.nav-panel-button-list-component .item {
+.nav-panel-button-list-component .item, .js-get-nav-panel-button-list-component .item {
   padding: 0px 10px;
 }
-.nav-panel-button-list-component .item__icon {
+.nav-panel-button-list-component .item__icon, .js-get-nav-panel-button-list-component .item__icon {
   margin-right: 10px;
   width: 15px;
 }
 .nav-panel-button-list-component .item--selected,
-.nav-panel-button-list-component .sub-item--selected {
+.nav-panel-button-list-component .sub-item--selected, .js-get-nav-panel-button-list-component .item--selected,
+.js-get-nav-panel-button-list-component .sub-item--selected {
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.01), -1px 1px 1px rgba(0, 0, 0, 0.01);
 }
-.nav-panel-button-list-component .sub-item__ellipsis-container {
+.nav-panel-button-list-component .sub-item__ellipsis-container, .js-get-nav-panel-button-list-component .sub-item__ellipsis-container {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.nav-panel-button-list-component .sub-item__ellipsis-container__icon {
+.nav-panel-button-list-component .sub-item__ellipsis-container__icon, .js-get-nav-panel-button-list-component .sub-item__ellipsis-container__icon {
   margin-right: 10px;
   width: 15px;
 }
