--- a/client/src/CSS/scss_partials/home/menu/nav-panel/_navPanelButtonList.scss
+++ b/client/src/CSS/scss_partials/home/menu/nav-panel/_navPanelButtonList.scss
@@ -1,7 +1,8 @@
 @use "../../../utils/variables" as v;
 @use "../../../utils/mixins" as m;
 
-.nav-panel-button-list-component, .js-get-nav-panel-button-list-component {
+.nav-panel-button-list-component,
+.js-get-nav-panel-button-list-component {
 	width: auto;
 	font-size: v.$common-font-size;
 	font-family: Arial, Helvetica, sans-serif;
@@ -10,7 +11,8 @@
 		padding-top: 10px;
 	}
 
-	.over-flow-container, .js-get-over-flow-container {
+	.over-flow-container,
+	.js-get-over-flow-container {
 		padding-bottom: 30px;
 		// Height found by eyeing it to make resize (using js) look less jumpy
 		height: 80vh;
@@ -41,13 +43,14 @@
 		}
 	}
 
-	.over-flow-container--scrollbar-present, .js-get-over-flow-container--scrollbar-present {
+	.over-flow-container--scrollbar-present,
+	.js-get-over-flow-container--scrollbar-present {
 		margin-top: 10px;
 		padding-top: 10px;
 		box-shadow: inset 0 7px 9px -7px rgba(0, 0, 0, 0.1);
 	}
 
-	.item,
+	.item-button,
 	.nav-panel-button-list-sub-item-component {
 		display: flex;
 		margin: 0 v.$nav-panel-button-margin-left-right;
@@ -63,28 +66,37 @@
 	}
 
 	// Overwrites padding for main items
-	.item {
+	.item-button {
 		padding: 0px v.$nav-panel-button-list-main-item-padding-left-right;
 	}
 
-	.item__icon {
+	.item-button__icon {
 		margin-right: v.$nav-panel-button-icon-margin-right;
 		width: v.$nav-panel-button-icon-width;
 	}
 
-	.item--selected,
-	.sub-item--selected {
+	.item-button--selected,
+	.sub-item-button--selected {
 		box-shadow: v.$common-button-box-shadow;
 	}
 
-	.sub-item__ellipsis-container {
+	.sub-item-button__icon {
+		margin-right: v.$nav-panel-button-icon-margin-right;
+		width: v.$nav-panel-button-icon-width;
+	}
+
+	.sub-item-button__tooltip-container {
+		position: relative;
+		margin-right: v.$nav-panel-button-icon-margin-right;
+	}
+
+	.sub-item-button__tooltip-container__icon {
+		width: v.$nav-panel-button-icon-width;
+	}
+
+	.sub-item-button__ellipsis-container {
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
-	}
-
-	.sub-item__ellipsis-container__icon {
-		margin-right: v.$nav-panel-button-icon-margin-right;
-		width: v.$nav-panel-button-icon-width;
 	}
 }
